[gd_scene load_steps=16 format=3 uid="uid://bl1e5q1ehsetf"]

[ext_resource type="Script" path="res://About.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bvtlux0fumq8y" path="res://GUI/back.png" id="4"]
[ext_resource type="FontFile" uid="uid://fyt0gk3g8yyl" path="res://Fonts/Jomhuria-Regular.ttf" id="4_yx0pu"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="7"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="StyleBoxEmpty" id="8"]

[sub_resource type="StyleBoxFlat" id="11"]
bg_color = Color(0.741176, 0.741176, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.741176, 0.741176, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="10"]
bg_color = Color(0.458824, 0.458824, 0.458824, 1)

[sub_resource type="StyleBoxEmpty" id="12"]

[node name="About" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -97.0
offset_right = 177.0
grow_vertical = 0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_yx0pu")
theme_override_font_sizes/font_size = 96
text = "v4.0.0"

[node name="Code" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_right = 257.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_colors/font_hover_color = Color(0.741176, 0.741176, 0.741176, 1)
theme_override_colors/font_pressed_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_yx0pu")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("3")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("4")
text = "Source Code"

[node name="Attributions" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 52.0
offset_right = 257.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_colors/font_hover_color = Color(0.741176, 0.741176, 0.741176, 1)
theme_override_colors/font_pressed_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_yx0pu")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("7")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("6")
theme_override_styles/normal = SubResource("8")
text = "Attributions"

[node name="BG_top" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 0, 70, 600, 70, 600, 0)

[node name="Title" type="Label" parent="BG_top"]
offset_left = 64.0
offset_right = 731.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_yx0pu")
theme_override_font_sizes/font_size = 72
text = "About"
vertical_alignment = 1

[node name="Back" type="Button" parent="BG_top"]
offset_left = 530.0
offset_right = 670.0
offset_bottom = 140.0
scale = Vector2(0.5, 0.5)
theme_override_styles/focus = SubResource("11")
theme_override_styles/hover = SubResource("9")
theme_override_styles/pressed = SubResource("10")
theme_override_styles/normal = SubResource("12")
icon = ExtResource("4")

[connection signal="pressed" from="Code" to="." method="_on_Code_pressed"]
[connection signal="pressed" from="Attributions" to="." method="_on_Attributions_pressed"]
[connection signal="pressed" from="BG_top/Back" to="." method="_on_Back_pressed"]
